Added ability to choose overwrite files when saving by #2304

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1867,4 +1867,5 @@
         <item quantity="many">%s colors</item>
         <item quantity="other">%s colors</item>
     </plurals>
+    <string name="overwrite_files_sub_short">Original file will be replaced with new one instead of saving in selected folder</string>
 </resources>
