--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1894,4 +1894,5 @@
     <string name="cannot_open_uri">Cannot open uri \"%s\"</string>
     <string name="snowfall_mode">Snowfall Mode</string>
     <string name="enabled">Enabled</string>
+    <string name="border_frame">Border Frame</string>
 </resources>
