Added VHS filter

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1898,4 +1898,5 @@
     <string name="glitch_variant">Glitch Variant</string>
     <string name="channel_shift">Channel Shift</string>
     <string name="max_offset">Max Offset</string>
+    <string name="vhs">VHS</string>
 </resources>
