Added Block Glitch filter

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1899,4 +1899,6 @@
     <string name="channel_shift">Channel Shift</string>
     <string name="max_offset">Max Offset</string>
     <string name="vhs">VHS</string>
+    <string name="block_glitch">Block Glitch</string>
+    <string name="block_size">Block Size</string>
 </resources>
