--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1901,4 +1901,7 @@
     <string name="vhs">VHS</string>
     <string name="block_glitch">Block Glitch</string>
     <string name="block_size">Block Size</string>
+    <string name="crt_curvature">CRT curvature</string>
+    <string name="curvature">Curvature</string>
+    <string name="chroma">Chroma</string>
 </resources>
