Added 5 Glitch filters: - Glitch Variant - VHS - Block Glitch - Crt Curvature - Pixel Melt

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1904,4 +1904,6 @@
     <string name="crt_curvature">CRT curvature</string>
     <string name="curvature">Curvature</string>
     <string name="chroma">Chroma</string>
+    <string name="pixel_melt">Pixel Melt</string>
+    <string name="max_drop">Max Drop</string>
 </resources>
