--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1906,4 +1906,6 @@
     <string name="chroma">Chroma</string>
     <string name="pixel_melt">Pixel Melt</string>
     <string name="max_drop">Max Drop</string>
+    <string name="ai_tools">AI Tools</string>
+    <string name="ai_tools_sub">Various tools to process images through ai models like artifact removing or denoising</string>
 </resources>
