Continue Ai Tools

--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1908,4 +1908,40 @@
     <string name="max_drop">Max Drop</string>
     <string name="ai_tools">AI Tools</string>
     <string name="ai_tools_sub">Various tools to process images through ai models like artifact removing or denoising</string>
+    <string name="model_anime_undeint">Compression, jagged lines</string>
+    <string name="model_broadcast">Cartoons, broadcast compression</string>
+    <string name="model_rgb_max_denoise_fp16">General compression, general noise</string>
+    <string name="model_wb_denoise">Colorless cartoon noise</string>
+    <string name="model_span_anime_pretrain">Fast, general compression, general noise, animation/comics/anime</string>
+    <string name="model_book_scan">Book scanning</string>
+    <string name="model_overexposure">Exposure correction</string>
+    <string name="model_fbcnn_color_fp16">Best at general compression, color images</string>
+    <string name="model_fbcnn_gray_fp16">Best at general compression, grayscale images</string>
+    <string name="model_fbcnn_gray_double_fp16">General compression, grayscale images, stronger</string>
+    <string name="model_scunet_color_gan_fp16">General noise, color images</string>
+    <string name="model_scunet_color_psnr_fp16">General noise, color images, better details</string>
+    <string name="model_scunet_gray_15_fp16">General noise, grayscale images</string>
+    <string name="model_scunet_gray_25_fp16">General noise, grayscale images, stronger</string>
+    <string name="model_scunet_gray_50_fp16">General noise, grayscale images, strongest</string>
+    <string name="model_jpeg_destroyer">General compression</string>
+    <string name="model_jaywreck">General compression</string>
+    <string name="model_h264">Texturization, h264 compression</string>
+    <string name="model_vhs">VHS compression</string>
+    <string name="model_bc_smooth">Non-standard compression (BC1)</string>
+    <string name="model_bc_detailed">Non-standard compression (BC1)</string>
+    <string name="model_cinepak">Non-standard compression (cinepak, msvideo1, roq)</string>
+    <string name="model_debink_v4">Blink compression, better on geometry</string>
+    <string name="model_debink_v5">Blink compression, stronger</string>
+    <string name="model_debink_v6">Blink compression, soft, retains detail</string>
+    <string name="model_antialias">Anti-aliasing</string>
+    <string name="model_kdm_scans">Scanned art/drawings, mild compression, moire</string>
+    <string name="model_sponge">Colorization, cartoons</string>
+    <string name="model_bandage">Color banding</string>
+    <string name="model_halftone">Slow, removing halftones</string>
+    <string name="model_colorizer">General colorizer</string>
+    <string name="model_deedge">Edge removal</string>
+    <string name="model_desharpen">Removes oversharpening</string>
+    <string name="model_dither">Slow, dithering</string>
+    <string name="model_gainres">Anti-aliasing, general artifacts, CGI</string>
+    <string name="merging">Merging</string>
 </resources>
