--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1943,13 +1943,9 @@
     <string name="model_desharpen">Removes oversharpening</string>
     <string name="model_dither">Slow, dithering</string>
     <string name="model_gainres">Anti-aliasing, general artifacts, CGI</string>
-    <string name="model_debink_v4">Video deblocking (Debink v4)</string>
-    <string name="model_debink_v5">Video deblocking (Debink v5)</string>
-    <string name="model_debink_v6">Video deblocking (Debink v6)</string>
     <string name="model_kdm003_scans">KDM003 scans processing</string>
     <string name="model_nmkd_jaywreck3_lite">NMKD Jaywreck3 Lite - lightweight image enhancement model</string>
     <string name="model_spongecolor_lite">SpongeColor Lite - color enhancement</string>
-    <string name="model_cinepak">Cinepak video processing</string>
     <string name="model_bcgone_detailed_v2">Compression artifact removal (BCGone Detailed V2)</string>
     <string name="model_bcgone_smooth">Compression artifact removal (BCGone Smooth)</string>
     <string name="model_bandage_smooth">Bandage removal with smooth results</string>
@@ -1959,4 +1955,7 @@
     <string name="model_nmkd_h264_texturize">H.264 texture enhancement (NMKD)</string>
     <string name="model_vhs_sharpen">VHS sharpening and enhancement</string>
     <string name="merging">Merging</string>
+    <string name="chunk_size">Chunk Size</string>
+    <string name="overlap_size">Overlap Size</string>
+    <string name="note_chunk_info">Images over %1$d px will be sliced and processed in chunks, overlap blends these to prevent visible seams.</string>
 </resources>
