--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1927,8 +1927,6 @@
     <string name="model_jaywreck">General compression</string>
     <string name="model_h264">Texturization, h264 compression</string>
     <string name="model_vhs">VHS compression</string>
-    <string name="model_bc_smooth">Non-standard compression (BC1)</string>
-    <string name="model_bc_detailed">Non-standard compression (BC1)</string>
     <string name="model_cinepak">Non-standard compression (cinepak, msvideo1, roq)</string>
     <string name="model_debink_v4">Blink compression, better on geometry</string>
     <string name="model_debink_v5">Blink compression, stronger</string>
@@ -1944,8 +1942,8 @@
     <string name="model_dither">Slow, dithering</string>
     <string name="model_gainres">Anti-aliasing, general artifacts, CGI</string>
     <string name="model_kdm003_scans">KDM003 scans processing</string>
-    <string name="model_nmkd_jaywreck3_lite">NMKD Jaywreck3 Lite - lightweight image enhancement model</string>
-    <string name="model_spongecolor_lite">SpongeColor Lite - color enhancement</string>
+    <string name="model_nmkd_jaywreck3_lite">Lightweight image enhancement model</string>
+    <string name="model_spongecolor_lite">Color enhancement</string>
     <string name="model_bcgone_detailed_v2">Compression artifact removal (BCGone Detailed V2)</string>
     <string name="model_bcgone_smooth">Compression artifact removal (BCGone Smooth)</string>
     <string name="model_bandage_smooth">Bandage removal with smooth results</string>
