--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -1970,4 +1970,7 @@
     <string name="import_model">Import model</string>
     <string name="import_model_sub">Import custom onnx model to further use, only onnx models are accepted, supports almost all esrgan like variants</string>
     <string name="imported_models">Imported Models</string>
+    <string name="model_scunet_color_15_fp16">General noise, colored images</string>
+    <string name="model_scunet_color_25_fp16">General noise, colored images, stronger</string>
+    <string name="model_scunet_color_50_fp16">General noise, colored images, strongest</string>
 </resources>
