Added types of models

--- a/core/resources/src/main/res/values-ru/strings.xml
+++ b/core/resources/src/main/res/values-ru/strings.xml
@@ -1946,4 +1946,11 @@
     <string name="preparing">Подготовка</string>
     <string name="active_model">Активная модель</string>
     <string name="failed_to_open_session">Не удалось открыть сессию</string>
+    <string name="type_dejpeg">DEJPEG</string>
+    <string name="type_denoise">Шумоподавление</string>
+    <string name="type_colorize">Раскаршивание</string>
+    <string name="type_artifacts">Артефакты</string>
+    <string name="type_enhance">Улучшение</string>
+    <string name="type_anime">Аниме</string>
+    <string name="type_scans">Сканы</string>
 </resources>
