--- a/core/resources/src/main/res/values/strings.xml
+++ b/core/resources/src/main/res/values/strings.xml
@@ -2020,4 +2020,9 @@
     <string name="model_realesrgan_x4plus_anime_4b32f">X4 Upscaler optimized for anime images; 4B32F variant with sharper details and smooth lines.</string>
     <string name="model_ultrasharp_v2_x4">X4 UltraSharp V2 model for general images; emphasizes sharpness and clarity.</string>
     <string name="model_ultrasharp_v2_lite_x4">X4 UltraSharp V2 Lite; faster and smaller, preserves detail while using less GPU memory.</string>
+    <string name="model_rmbg_1_4">Lightweight model for quick background removal. Balanced performance and accuracy. Works with portraits, objects, and scenes. Recommended for most use cases.</string>
+    <string name="model_rmbg_2_0">Enhanced version with superior detail handling. Better with complex backgrounds and transparent objects. Higher precision but requires more processing power.</string>
+    <string name="type_removebg">Remove BG</string>
+    <string name="horizontal_border_thinkness">Horizontal Border Thinkness</string>
+    <string name="vertical_border_thinkness">Vertical Border Thinkness</string>
 </resources>
